# lab12-2

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
cmake/: HunterGate.cmake
